--- a/reveal.js/package.json
+++ b/reveal.js/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "test": "gulp test",
-    "start": "gulp serve",
+    "start": "python3 prepFiles.py & gulp serve",
     "build": "gulp build"
   },
   "author": {
